[IMPROVEMENT] fix z-index for admin frontend panel search

--- a/templates/css/admin_shared.css
+++ b/templates/css/admin_shared.css
@@ -11,7 +11,7 @@
 #ms_admin_top_search .select2-container .select2-choice .select2-arrow b { background-position:left 7px; }
 
 .select2-drop.adminpanel-search-bigdrop { width:150px !important; border:none; background:#666; border-radius:0; }
-#select2-drop.select2-drop.adminpanel-search-bigdrop { width:500px !important; font-size:14px; line-height:20px; font-family:"Open Sans", Arial, Helvetica, sans-serif; z-index:10005; }
+#select2-drop.select2-drop.adminpanel-search-bigdrop { width:500px !important; font-size:14px; line-height:20px; font-family:"Open Sans", Arial, Helvetica, sans-serif; z-index:8888890; }
 .select2-drop.adminpanel-search-bigdrop ul.select2-results { max-height:297px; font-size:13px; line-height:20px; font-family:"Open Sans", Arial, Helvetica, sans-serif; }
 .select2-drop.adminpanel-search-bigdrop ul.select2-results > li > .select2-result-label { background:#333; color:#fff; }
 .select2-drop.adminpanel-search-bigdrop ul.select2-result-sub > li > .select2-result-label a { color:#fff; }
